Update Java to 20