@@ -1,4 +1,6 @@
-FROM maven:3.8.7-eclipse-temurin-17-focal as build
+# FROM maven:3.8.7-eclipse-temurin-17-focal as build
+FROM maven:3.9.1-amazoncorretto-20-debian as build
+
 WORKDIR /app
 COPY pom.xml .
 # To resolve dependencies in a safe way (no re-download when the source code changes)
@@ -11,7 +13,8 @@ COPY package-lock.json .
 COPY tsconfig.json .
 RUN mvn package -Pproduction
 
-FROM eclipse-temurin:17-jdk-alpine
+# FROM eclipse-temurin:17-jdk-alpine
+FROM eclipse-temurin:20.0.1_9-jre-alpine
 # FROM openjdk:17-alpine
 WORKDIR /app
 RUN mkdir -p config
@@ -19,9 +22,9 @@ RUN mkdir -p frontend
 COPY --from=build /app/target/*.jar .
 COPY --from=build /app/frontend/* ./frontend/
 
-#COPY config/application.yml ./config/
-#COPY config/verticles.yml ./config/
+COPY config/application.yml ./config/
+COPY config/verticles.yml ./config/
 
-COPY application.yml ./config/
-COPY verticles.yml ./config/
-ENTRYPOINT ["java","-jar","yaz-condominium-manager-1.0.0.jar"]
+#COPY application.yml ./config/
+#COPY verticles.yml ./config/
+ENTRYPOINT ["java", "--enable-preview" ,"-jar","yaz-condominium-manager-1.0.0.jar"]
